<resources>
    <string name="app_name">MyNavApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Edarp Homevisit</string>
    <string name="nav_header_subtitle">nyumbani.app@edarp.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="reason1">New Client</string>
    <string name="reason2">Defaulter Tracing</string>
    <string name="reason3">TB Client</string>
    <string name="reason4">PMTCT</string>
    <string name="reason5">HEI Client</string>
    <string name="reason6">High Viral Load Client</string>
    <string name="select_reason">Select the Reason (s) for Home Visit:</string>

    //New Client
    <string name="newclientform">New Client Form:</string>
    <string name="pillcount"> Number of pill count: </string>
    <string name="nexttca">Number of days to the Next TCA</string>
    <string name="stressful">"Is the client suffering from any stressful situation? "</string>
    <string name="sexualpartner">"Is Sexual partner tested: "</string>
    <string name="adr">Does the client have any ADR :</string>
    <string name="yesadr">If yes, specify</string>
    <string name="matchtca">Are the pills matching the TCA :</string>
    <string name="issuedselftestkit">"If No, Was the client issued a Self-test Kit "</string>
    <string name="testresults">If yes, what was the test result?</string>


    <string-array name="yes_no">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    //Defaulter strings
    <string name="defaulterform">Defaulter tracing Home visit form</string>
    <string name="clientfound">"Was the client found : "</string>
    <string name="reasonfordefaulting">"If Yes, Reason why the client defaulted "</string>
    <string name="defaulteractiontaken">"Action taken: "</string>
    <string name="defaulteraction1">" Call the clinician to attend the client"</string>
    <string name="defaulteraction2">Accompany the client to the facility</string>
    <string name="defaulteraction3">Collect drugs for the client</string>
    <string name="defaulteroutcome">Defaulter tracing outcome :</string>
    <string name="defaulteroutcome1">Client Self Transferred out</string>
    <string name="defaulteroutcome2">" Client Died"</string>
    <string name="defaulteroutcome3">"Client Shifted "</string>
    <string name="shiftedto">Specify Shifted to</string>
    <string name="selftransferredto">Client self transferred to</string>

    //HEI strings
    <string name="heiform">HEI Form</string>
    <string name="pcr">Are all the PCR done according to the guideline (this will depend with the age) :</string>
    <string name="pcrreason">"If No, Specify the reason "</string>
    <string name="antibodytest">Is the antibody test done(18 Months and above)? :</string>
    <string name="noantibodyreason">"If No, Specify the reason "</string>
    <string name="prophylaxis">"Is the child taking Prophylaxis :  "</string>
    <string name="noprophylaxis">"If No, Specify the reason : "</string>
    <string name="heiactiontaken">"Action taken: "</string>
    <string name="heiaction1">Call the clinician to attend the client</string>
    <string name="heiaction2">Accompany the client to the facility</string>
    <string name="heiaction3">Collect prophylaxis drugs for baby</string>
    <string name="heiaction4">" Book child for follow up antibody test"</string>


    //High viral load clients
    <string name="viralform">High Viral load client Form</string>
    <string name="viralsexualpartner">Is your Sexual partner tested :</string>
    <string name="viralselftestkit">"If No, Was the client issued a Self-test Kit :  "</string>
    <string name="lastvl">When was the last VL done :</string>
    <string name="drugstime">Does the client take the drugs in the right time :</string>
    <string name="nodrugstimereason">" If No, Specify the reason  "</string>
    <string name="viralmdt">Is the client on MDT :</string>
    <string name="nomdtreason">" If No, Specify the reason : "</string>
    <string name="btn">Save</string>


</resources>
