<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e0e0e0"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/heiformTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heiform"
            android:textColor="#f00"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/pcrTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pcr"
                android:textColor="#101010"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/pcr_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/pcrreasonTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pcrreason"
            android:textColor="#101010"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/pcrreasonEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/antibodytestTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/antibodytest"
                android:textColor="#101010"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/antibodytest_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/noantibodyreasonTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noantibodyreason"
            android:textColor="#101010"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/noantibodyreasonEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/prophylaxisTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prophylaxis"
                android:textColor="#101010"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/prophylaxis_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/noprophylaxisTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noprophylaxis"
            android:textColor="#101010"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/noprophylaxisEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/heiactiontakenTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heiactiontaken"
            android:textColor="#101010"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/heicallclinicianCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:padding="10dp"
            android:text="@string/heiaction1"
            android:textColor="#101010"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/heiaccompanyclientCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:padding="10dp"
            android:text="@string/heiaction2"
            android:textColor="#101010"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/heicollectprophylaxisCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:padding="10dp"
            android:text="@string/heiaction3"
            android:textColor="#101010"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/heiantibodytestCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:padding="10dp"
            android:text="@string/heiaction4"
            android:textColor="#101010"
            android:textSize="15sp" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>