<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e0e0e0"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/viralformTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viralform"
            android:textColor="#f00"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/viralsexualpartnerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/viralsexualpartner"
                android:textColor="#101010"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/viralsexualpartner_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/viralselftestkitTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/viralselftestkit"
                android:textColor="#101010"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/viralselftestkit_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastvl"
                android:onClick="showDatePickerDialog" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/drugstimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drugstime"
                android:textColor="#101010"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/drugstime_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/nodrugstimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nodrugstimereason"
            android:textColor="#101010"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/nodrugstimeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/viralmdtTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/viralmdt"
                android:textColor="#101010"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/viralmdt_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/nomdtTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nomdtreason"
            android:textColor="#101010"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/nomdtEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>