<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e0e0e0"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/newclientformTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newclientform"
            android:textColor="#f00"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/pillcountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pillcount"
            android:textColor="#101010"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/pillcountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:id="@+id/nexttcaTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nexttca"
            android:textColor="#101010"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/nexttcaEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/matchtcaTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/matchtca"
                android:textColor="#101010"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/matchtca_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/adrTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adr"
                android:textColor="#101010"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/adr_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/sexualpartnerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexualpartner"
                android:textColor="#101010"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/sexualpartner_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/stressfulTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stressful"
                android:textColor="#101010"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/stressful_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>